--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
