--- a/back/package.json
+++ b/back/package.json
@@ -10,8 +10,12 @@
   "author": "kms",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql2": "^3.6.5",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.35.2",
     "sequelize-cli": "^6.6.2"
   },
