--- a/front/package.json
+++ b/front/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
-    "immer": "^10.0.3",
+    "immer": "^9.0.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
@@ -16,6 +16,7 @@
     "redux": "^5.0.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.2.3",
+    "shortid": "^2.2.16",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
