--- a/front/package.json
+++ b/front/package.json
@@ -22,7 +22,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=production react-scripts start -p 80",
+    "start": "react-scripts start",
     "build": "cross-env ANALYZE=true NODE_ENV=production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
