--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "express": "^4.18.2",
     "immer": "^9.0.21",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.17.0",
