--- a/admin/package.json
+++ b/admin/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.19.2",
+    "cross-env": "^7.0.3",
     "dayjs": "^1.11.10",
     "express": "^4.18.2",
     "immer": "^9.0.21",
