--- a/admin/package.json
+++ b/admin/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.19.2",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.10",
     "express": "^4.18.2",
@@ -22,7 +23,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set HOST=0.0.0.0&&set PORT=3060&&react-scripts start",
+    "start": "set HOST=0.0.0.0&&set PORT=3000&&react-scripts start",
     "build": "cross-env ANALYZE=true NODE_ENV=production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
