--- a/back/package.json
+++ b/back/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.3",
     "mysql2": "^3.6.5",
     "node-geocoder": "^4.2.0",
+    "node-schedule": "^2.1.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "sequelize": "^6.35.2",
