--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.15",
     "redux": "^5.0.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.2.3",
